syy fix to tutorial 1

--- a/tutorials/tutorialS1_1.ipynb
+++ b/tutorials/tutorialS1_1.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# CP213: Tutorial Notebook 1\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Question 1"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "1. Find the exact value of the integral\n",
     "   \\begin{align*}\n",
@@ -33,25 +32,25 @@
     "4. Make a plot of the percentage error between the exact value and the\n",
     "   value estimated by the trapezium rule and the number $N$ of equal\n",
     "   intervals used from $N=1$ to $100$."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Question 2"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "A projectile initially located at the origin has an initial speed\n",
     "$v_0=10\\,{\\rm m\\,s}^{-1}$ directed at an angle of $\\theta=30^\\circ$\n",
@@ -71,88 +70,88 @@
     "4. Repeat parts 2 and 3 of the problem if the velocity of the projectile\n",
     "   is at an angle of $60^\\circ$ from the horizontal.  At what angle\n",
     "   will the projectile travel the furthest in the $x$-direction?\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Question 3"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Plot the data set given in the code block below:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "x_dat = [1220, 1139, 1874, 1550, 1203, 1488, 2003, 1368, 1389, 1300, 1877, 1670, 1080, 1766, 1445, 1718, 1263, 1432, 1557, 1127]\n",
-    "y_dat = [42, 46.5, 28.5, 37.5, 43.5, 36, 21, 36, 37.5, 40.5, 27, 33, 49.5, 30, 39, 31.5, 48, 21, 34.5, 61.5]\n"
-   ]
+    "x_dat = [1220, 1139, 1874, 1550, 1203, 1488, 2003, 1368, 1389, 1300, 1877, 1670, 1080, 1766, 1445, 1718, 1263, 1432, 1557, 1127]\r\n",
+    "y_dat = [42, 46.5, 28.5, 37.5, 43.5, 36, 21, 36, 37.5, 40.5, 27, 33, 49.5, 30, 39, 31.5, 48, 21, 34.5, 61.5]\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "The average value of $x$ and $y$, denoted by $\\bar{x}$ and $\\bar{y}$, respectively, are defined by\n",
-    "\\begin{align*}\n",
-    "\\bar{x} &= \\frac{1}{N}\\sum_{k=0}^{N-1} x_k\n",
-    "\\\\\n",
-    "\\bar{y} &= \\frac{1}{N}\\sum_{k=0}^{N-1} x_k\n",
-    "\\end{align*}\n",
-    "where $N$ is the number of data points.\n",
-    "\n",
-    "Compute $\\bar{x}$ and $\\bar{y}$ for the data set provided.\n"
-   ]
+    "The average value of $x$ and $y$, denoted by $\\bar{x}$ and $\\bar{y}$, respectively, are defined by\r\n",
+    "\\begin{align*}\r\n",
+    "\\bar{x} &= \\frac{1}{N}\\sum_{k=0}^{N-1} x_k\r\n",
+    "\\\\\r\n",
+    "\\bar{y} &= \\frac{1}{N}\\sum_{k=0}^{N-1} y_k\r\n",
+    "\\end{align*}\r\n",
+    "where $N$ is the number of data points.\r\n",
+    "\r\n",
+    "Compute $\\bar{x}$ and $\\bar{y}$ for the data set provided.\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "The variance of $x$ (denoted by $S_{xx}$), the variance of $y$\n",
-    "(denoted by $S_{yy}$), and the covariance between $x$ and $y$ (denoted\n",
-    "by $S_{xy}$) are defined as:\n",
-    "\\begin{align*}\n",
-    "S_{xx} &= \\frac{1}{N}\\sum_{k=0}^{N-1} (x_k-\\bar{x})^2\n",
-    "\\\\\n",
-    "S_{xy} &= \\frac{1}{N}\\sum_{k=0}^{N-1}(x_k-\\bar{x})(y_k-\\bar{y})\n",
-    "\\\\\n",
-    "S_{yy} &= \\frac{1}{N} \\sum_{k=0}^{N-1}(x_k-\\bar{x})(y_k-\\bar{y})\n",
-    "\\end{align*}\n",
-    "Compute $S_{xx}$, $S_{xy}$, and $S_{yy}$.\n"
-   ]
+    "The variance of $x$ (denoted by $S_{xx}$), the variance of $y$\r\n",
+    "(denoted by $S_{yy}$), and the covariance between $x$ and $y$ (denoted\r\n",
+    "by $S_{xy}$) are defined as:\r\n",
+    "\\begin{align*}\r\n",
+    "S_{xx} &= \\frac{1}{N}\\sum_{k=0}^{N-1} (x_k-\\bar{x})^2\r\n",
+    "\\\\\r\n",
+    "S_{xy} &= \\frac{1}{N}\\sum_{k=0}^{N-1}(x_k-\\bar{x})(y_k-\\bar{y})\r\n",
+    "\\\\\r\n",
+    "S_{yy} &= \\frac{1}{N} \\sum_{k=0}^{N-1}(y_k-\\bar{y})^2\r\n",
+    "\\end{align*}\r\n",
+    "Compute $S_{xx}$, $S_{xy}$, and $S_{yy}$.\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The general equation for the best fit line through a set of data is\n",
     "given by:\n",
@@ -169,25 +168,25 @@
     "We will derive these equation next semester in the module.\n",
     "\n",
     "Plot the equation of the best fit line along with the original data.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Question 4"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Consider the gas-water shift reaction\n",
     "\\begin{align*}\n",
@@ -207,13 +206,12 @@
     "\n",
     "\n",
     "The data in the table have been summarized in the dictionary `data`.  The stoichiometric coefficients (the stoichiometric coefficient for species $k$ is typically denoted by the symbol $\\nu_k$) of the reaction are held in the dictionary `nu`.  Note that product species have a positive stoichiometric coefficient, and reactant species have a negative stoichiometric coefficient."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "R = 8.314e-3  # ideal gas constant / kJ mol^{-1} K^{-1}\n",
     "T0 = 298.15   # reference temperature / K\n",
@@ -237,11 +235,12 @@
     "nu['CO2'] =  1.0 \n",
     "nu['H2']  =  1.0\n",
     "nu['H2O'] = -1.0"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Part 1: Standard reaction enthalpy and Gibbs energy\n",
     "\n",
@@ -258,13 +257,12 @@
     "where $G_{f,k}$ is the standard enthalpy of formation of species $k$.\n",
     "\n",
     "**Task:** Calculate the standard enthalpy of reaction and the standard Gibbs energy of reaction."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "Hrxn = 0.0 # Heat of reaction\n",
     "Grxn = 0.0 # Gibbs free energy of reaction\n",
@@ -273,11 +271,12 @@
     "\n",
     "print(f'standard enthalpy of reaction: {Hrxn} kJ mol^{{-1}}')    \n",
     "print(f'standard Gibbs energy of reaction: {Grxn} kJ mol^{{-1}}')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Part 2: Conversion between mole numbers and mole fractions\n",
     "\n",
@@ -288,13 +287,12 @@
     "where $N_k$ is the number of moles of species $k$, and $N=\\sum_j N_j$ is the total moles in the system.\n",
     "\n",
     "**Task:** From the dictionary with the mole numbers as an input, create a dictionary of mole fractions."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# some test data - mole numbers of some gases\n",
     "mole = {}\n",
@@ -315,11 +313,12 @@
     "# output your answer\n",
     "for name, x in x_dict.items():\n",
     "    print(f'{name}: mole fraction = {x}')\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Part 3: Heat capacity\n",
     "\n",
@@ -344,13 +343,12 @@
     "\n",
     "The coefficients of the heat capacity have been added to the dictionary `data` (see below).  In what follows below, assume that the mixtures behave as an ideal gas.\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "data['CO'] ['Cp_coeff'] = [3.912, -3.913e-3,  1.182e-5, -1.302e-8,  0.515e-11]      \n",
     "data['CO2']['Cp_coeff'] = [3.259,  1.356e-3,  1.502e-5, -2.374e-8,  1.056e-11]      \n",
@@ -359,21 +357,21 @@
     "\n",
     "R = 8.314  # J mol^{-1} K^{-1}\n",
     "\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Task:**\n",
     "Plot the molar heat capacity of the mixture and of each of the individual components as a function of temperature."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "moles = {'CO':1, 'CO2':2, 'H2':0, 'H2O':1}\n",
     "T_data = np.arange(200.0, 600.0, 10.0)\n",
@@ -384,11 +382,12 @@
     "plt.xlabel('temperature / K')\n",
     "plt.ylabel(r'molar heat capacity / J mol$^{-1}$ K$^{-1}$')\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Task:**\n",
     "Plot the heat capacity of reaction $\\Delta C_{p,{\\rm rxn}}(T)$ of the gas-water shift reaction as a function of temperature.\n",
@@ -399,13 +398,12 @@
     "&= \\sum_k \\nu_k C_{p,k}(T)\n",
     "\\end{align*}\n",
     "where $T$ is the absolute temperature of the system, and $C_{p,k}(T)$ is the molar heat capacity of species $k$ at temperature $T$."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "T_data = np.arange(200.0, 600.0, 10.0)\n",
     "\n",
@@ -414,14 +412,16 @@
     "plt.xlabel('temperature / K')\n",
     "plt.ylabel(r'$\\Delta C_{p,{\\rm rxn}}$ / J mol$^{-1}$ K$^{-1}$')\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
