updates to python_lists.ipynb

--- a/notebooks/python_lists.ipynb
+++ b/notebooks/python_lists.ipynb
@@ -343,10 +343,57 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "oT3QcwqCB6FG"
+   },
+   "source": [
+    "Alternatively, we can loop through a list using an `iterator` variable. We can do so with the combination of previously discussed functions: `range()` and `len()`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "-nf4ELFRB5qt"
+   },
+   "outputs": [],
+   "source": [
+    "mass_list = [2.3, 6.2, 2.8, 5.6]\n",
+    "\n",
+    "for i in range(len(mass_list)):\n",
+    "    print(i, mass_list[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "twao4buxDpPA"
+   },
+   "source": [
+    "This method has the advantage of allowing you to access not just one element in a list, but also the elements next to it. For example, if we wanted to find the difference between the elements in `mass_list`, we can do so as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "-tJHnBj5Egb0"
+   },
+   "outputs": [],
+   "source": [
+    "mass_list = [2.3, 6.2, 2.8, 5.6]\n",
+    "\n",
+    "for i in range(len(mass_list) - 1):\n",
+    "    diff = mass_list[i+1]-mass_list[i] \n",
+    "    print(diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "m5YeZJwP6eVU"
    },
    "source": [
-    "We can also perform operations inside of the loop. If we want to know the total mass of the system, we just need to sum over all the elements of `mass_list`."
+    "Demonstrated above, we can also perform mathematical operations inside of the loop. If we want to know the total mass of the system, we just need to sum over all the elements of `mass_list`."
    ]
   },
   {
@@ -412,6 +459,167 @@
    "outputs": [],
    "source": [
     "print(sum(mass_frac))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "U4Nlxf5-FiQ9"
+   },
+   "source": [
+    "## Worked Example: Rectangle/Mid-point Rule Integration\n",
+    "\n",
+    "Combining what we've learned so far, consider the following integral:\n",
+    "\\begin{equation}\n",
+    "  I = \\int_0^{10} dx\\, (x^2 + 2x + 1)\n",
+    "\\end{equation}\n",
+    "We can approximate the integral by using the midpoint rule and 10 rectangles of equal width $\\Delta x=1$.  If we number the rectangles from 0 to 9, the center of rectangle $i$ is $x_i=(i+1/2)\\Delta x$.  Then the approximation is\n",
+    "\\begin{align*}\n",
+    "I &\\approx  \\sum_{i=0}^{9} \\Delta x\\, (x_i^2 + 2x_i + 1)\n",
+    "\\\\\n",
+    "&\\approx \\sum_{i=0}^9 \\Delta x\\,f_i\n",
+    "\\end{align*}\n",
+    "where $f_i = x_i^2 + 2x_i + 1$.\n",
+    "\n",
+    "To do so, we must first create a list that corresponds to the center point of each rectangle, from which we will find the height of the rectangle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "f8zrhmylHCJ9"
+   },
+   "outputs": [],
+   "source": [
+    "N = 10 # number of rectangles\n",
+    "a = 0 # lower limit\n",
+    "b = 10 # upper limit\n",
+    "\n",
+    "dx = (b-a)/N\n",
+    "\n",
+    "x_list = [(i+0.5)*dx for i in range(N)] # list with the center of each rectangle\n",
+    "f_list = [x**2 + 2*x + 1 for x in x_list]\n",
+    "\n",
+    "print(x_list)\n",
+    "print(f_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "wqbkIvdTI54z"
+   },
+   "source": [
+    "Note that we could have also constructed the required lists using a loop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "PyD4JjidJkc4"
+   },
+   "outputs": [],
+   "source": [
+    "x_list = []\n",
+    "f_list = []\n",
+    "for i in range(N):\n",
+    "    x = dx*(i+0.5)\n",
+    "    x_list.append(x)\n",
+    "    f_list.append(x**2+2*x+1)\n",
+    "    \n",
+    "print(x_list)\n",
+    "print(f_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "7Q6ygeQsKnxx"
+   },
+   "source": [
+    "Finally, we can multiply the heights by the bar width to get the area of each bar, then sum them up to find the approximate area under the curve.  This is just the physical content of the approximation:\n",
+    "\\begin{align*}\n",
+    "I &\\approx  \\sum_{i=0}^{9} \\Delta x\\, (x_i^2 + 2x_i + 1)\n",
+    "\\approx \\sum_{i=0}^9 \\Delta x\\,f_i\n",
+    ".\n",
+    "\\end{align*}\n",
+    "We will perform this sum with a `for` loop.  Note that the index $i$ runs over the number of the rectangle.  The area of each rectangle, which is equal to $\\Delta x\\,f_i$, is sequentially added to the variable $I$, in a manner that is very similar to what is shown mathematically in the equation above.  \n",
+    "\n",
+    "The answer below should be compared to the exact value $I=443.333$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "91nnI3cFK9Le"
+   },
+   "outputs": [],
+   "source": [
+    "I = 0\n",
+    "for i in range(N):\n",
+    "    I += f_list[i]\n",
+    "I *= dx    \n",
+    "print(I)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we increase the number of rectangles, the accuracy of the approximation should increase. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "mtnDOg5_Oz6m"
+   },
+   "source": [
+    "The following code block can be ran to visualize the process we just completed. Don't worry if the code looks a bit complicated, it is purely for demonstration purposes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "lgJ4gBAxNTkG"
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pylab as plt\n",
+    "import matplotlib.patches as mpatches\n",
+    "from matplotlib.patches import Rectangle\n",
+    "x_exact = np.arange(0.0, 10.0, 0.01)\n",
+    "f_exact = [x**2 + 2*x + 1 for x in x_exact]\n",
+    "#plt.figure()\n",
+    "plt.plot(x_exact, f_exact, color='black')\n",
+    "plt.plot(x_list, [0 for x in x_list], 'o', color='black', label='Mid-points')\n",
+    "currentAxis = plt.gca()\n",
+    "for x, f in zip(x_list, f_list):\n",
+    "    xleft = x - 0.5*dx\n",
+    "    xright = x + 0.5*dx\n",
+    "    currentAxis.add_patch(Rectangle((x-0.5*dx, 0), dx, f, alpha=0.5, edgecolor='blue'))    \n",
+    "    #plt.plot([xleft, xleft, xright, xright], [0.0, f, f, 0.0], color='blue')\n",
+    "plt.xlabel(r'$x$')\n",
+    "plt.ylabel(r'$f(x)=x^2+2x+1$')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "#plt.plot(x_list, f_list, label='x^2 + 2x + 1')\n",
+    "#plt.plot(x_list, [0 for x in x_list], 'x', label='Mid-points')\n",
+    "#plt.xlabel('x')\n",
+    "#plt.ylabel('f(x)')\n",
+    "#for i in range(N):\n",
+    "#  rect=mpatches.Rectangle((x_list[i]-0.5*dx,0), dx,f_list[i], color=\"green\", alpha=0.1)\n",
+    "#  plt.gca().add_patch(rect)\n",
+    "#plt.legend()"
    ]
   },
   {
