adding solutions to tutorial 1

--- a/tutorials/tutorialS1_1-soln.ipynb
+++ b/tutorials/tutorialS1_1-soln.ipynb
@@ -61,16 +61,18 @@
    "source": [
     "### Part 2\n",
     "\n",
+    "An integral of a function is the area underneath the function.  We can approximate the integral by finding a way to approximately determine the area.  One way to do this is to break up the function into equally spaced strips along the $x$-coordinate.  The area of each of these strips can be approximated by the area of a trapezoid.  \n",
+    "\n",
     "The area $\\Delta A$ of a trapezoid with a base of length $\\Delta x$, one side of height $h_1$ and the other side of height $h_2$ is\n",
     "\\begin{align*}\n",
-    "\\Delta A &= \\frac{\\Delta x}{2}(h_1+h+2)\n",
+    "\\Delta A &= \\frac{\\Delta x}{2}(h_1+h_2)\n",
     ".\n",
     "\\end{align*}\n",
-    "If we \n",
-    "then the approximation to the integral is just the sum of the set of areas of the corresponding trapezoids.\n",
+    "The approximation to the integral is then just the sum of the areas of each of the corresponding trapezoids.\n",
     "\\begin{align*}\n",
-    "I \\approx \\sum_k \\frac{x_{i+1}-x_i}{2}[f(x_{i+1}+f(x_i)]\n",
-    "\\end{align*}"
+    "I \\approx \\sum_k \\frac{x_{i+1}-x_i}{2}[f(x_{i+1})+f(x_i)]\n",
+    "\\end{align*}\n",
+    "Note that trapezoid $i$ is located between points $x_i$ and $x_{i+1}$, and so its width is $x_{i+1}-x_i$.  The height of its left side is $f(x_i)$, and the height of its right side is $f(x_{i+1})$.  This leads to the formula above.  Below, we implement the summation in Python."
    ]
   },
   {
@@ -81,9 +83,9 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "I_exact = 0.25\n",
+    "I_exact = 0.25  # This comes from Part 1 of the problem.\n",
     "\n",
-    "N = 4  \n",
+    "N = 4  # This is the number of trapezoids we are using.\n",
     "x_data = np.linspace(0.0, 1.0, N+1)  # N trapezoids leads to N+1 points\n",
     "f_data = [x**3 for x in x_data]\n",
     "\n",
@@ -128,7 +130,7 @@
     "\n",
     "I_exact = 0.25\n",
     "\n",
-    "N = 8\n",
+    "N = 8  # Now we are using 8 trapezoids\n",
     "x_data = np.linspace(0.0, 1.0, N+1)  # N trapezoids leads to N+1 points\n",
     "f_data = [x**3 for x in x_data]\n",
     "\n",
@@ -198,7 +200,7 @@
     "plt.legend()\n",
     "\n",
     "plt.subplot(122)\n",
-    "error_data = [(I-I_exact)/I_exact*100.0 for I in I_data]\n",
+    "error_data = [(I-I_exact)/I_exact*100.0 for I in I_data] # create a list of errors\n",
     "plt.plot(N_data, error_data, 'o', color='red')\n",
     "plt.yscale('log')\n",
     "plt.ylabel('error %')\n",
@@ -750,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,9 +803,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "standard enthalpy of reaction: -41.0 kJ mol^{-1}\n",
+      "standard Gibbs energy of reaction: -29.00000000000003 kJ mol^{-1}\n"
+     ]
+    }
+   ],
    "source": [
     "Hrxn = 0.0 # Heat of reaction\n",
     "Grxn = 0.0 # Gibbs free energy of reaction\n",
@@ -831,9 +842,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CO: mole fraction = 0.25\n",
+      "CO2: mole fraction = 0.25\n",
+      "H2: mole fraction = 0.25\n",
+      "H2O: mole fraction = 0.25\n"
+     ]
+    }
+   ],
    "source": [
     "# some test data - mole numbers of some gases\n",
     "mole = {}\n",
