--- a/tutorials/tutorialS1_2-soln.ipynb
+++ b/tutorials/tutorialS1_2-soln.ipynb
@@ -249,11 +249,224 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_coefficients(T):\n",
+    "    if (T>=100 and T<500):\n",
+    "        A =  28.98641\n",
+    "        B =  1.853978\n",
+    "        C = -9.647459\n",
+    "        D =  16.63537\n",
+    "        E =  0.000117\n",
+    "    elif (T>=500 and T<2000):        \n",
+    "        A =  19.50583\n",
+    "        B =  19.88705\n",
+    "        C = -8.598535\n",
+    "        D =  1.369784\n",
+    "        E =  0.527601\n",
+    "    elif (T>=2000 and T<=6000):        \n",
+    "        A =  35.51872\n",
+    "        B =  1.128728\n",
+    "        C = -0.196103\n",
+    "        D =  0.014662\n",
+    "        E = -4.553760\n",
+    "        \n",
+    "    return A, B, C, D, E\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_Cp(T):    \n",
+    "    A, B, C, D, E = get_coefficients(T)\n",
+    "    t = T/1000.0\n",
+    "    Cp = A + B*t + C*t**2 + D*t**3 + E/t**2\n",
+    "    return Cp\n",
+    "\n",
+    "import numpy as np\n",
+    "import pylab as plt\n",
+    "\n",
+    "T_data = np.linspace(100.0, 6000.0, 100)\n",
+    "Cp_data = [get_Cp(T) for T in T_data]\n",
+    "plt.plot(T_data, Cp_data)\n",
+    "plt.xlabel(r'temperature / K')\n",
+    "plt.ylabel(r'molar heat capacity / J mol$^{-1}$ K$^{-1}$')\n",
+    "plt.show()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2\n",
+    "\n",
+    "To get the enthalpy, we can perform the integration of heat capacity by hand.  This is straightforward to do, although it is tedious, so we can get `sympy` to do this for us:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "T, A, B, C, D, E = sp.symbols('T A B  C  D  E')\n",
+    "t = T/1000\n",
+    "Cp = A + B*t + C*t**2 + D*t**3 + E/t**2\n",
+    "\n",
+    "H = sp.integrate(Cp, T)\n",
+    "print(H)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can use this expression to start calculating the enthalpy; however, this is one complication.  Because the coefficients for the heat capacity are different in different temperature ranges, we need to divide the integration of the heat capacity into different sections.\n",
+    "\n",
+    "First we note that differences in the enthalpy are given by integrals of the heat capacity:\n",
+    "\\begin{align*}\n",
+    "H(T_{\\rm end})\n",
+    "&= H(T_{\\rm start})\n",
+    "+ \\int_{T_{\\rm start}}^{T_{\\rm end}} dT\\, C_p(T)\n",
+    "\\end{align*}\n",
+    "where $T_{\\rm end}$ is the temperature where we want the value of the enthalpy, and $T_{\\rm start}$ is a temperature where we know the enthalpy.  Let's get sympy to give us this formula:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "T, A, B, C, D, E = sp.symbols('T A B  C  D  E')\n",
+    "t = T/1000\n",
+    "Cp = A + B*t + C*t**2 + D*t**3 + E/t**2\n",
+    "\n",
+    "T_start, T_end = sp.symbols('T_start T_end')\n",
+    "H = sp.integrate(Cp, (T, T_start, T_end))\n",
+    "print(H)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are told to set the enthalpy of the gas at $298.15\\,{\\rm K}$ to be zero.  That is $H(T=298.15\\,{\\rm K})=0$.  So, let's begin by setting $T_{\\rm start}=298.15\\,{\\rm K}$.  We can then use our integration of the heat capacity to get the enthalpy at any temperature between $100\\,{\\rm K}$ and $500\\,{\\rm K}$.  \n",
+    "\\begin{align*}\n",
+    "H(T) &= \\int_{298.15\\,{\\rm K}}^{T} dT'\\, C_p(T')\n",
+    ".\n",
+    "\\end{align*}\n",
+    "\n",
+    "We cannot use this formula to get the enthalpy for temperature greater than $100\\,{\\rm K}$, because the coefficients of the heat capacity change.  To get around this problem, we determine the enthalpy at $500\\,{\\rm K}$ using our previous formula.  Then we can determine the enthalpy at temperatures between $500\\,{\\rm K}$ and $2000\\,{\\rm K}$ using:\n",
+    "\\begin{align*}\n",
+    "H(T) &= H(500\\,{\\rm K}) + \\int_{500\\,{\\rm K}}^{T} dT'\\, C_p(T')\n",
+    ".\n",
+    "\\end{align*}\n",
+    "which is valid for $500,{\\rm K}<T<2000\\,{\\rm K}$.\n",
+    "\n",
+    "Again, we cannot use this formula to get the enthalpy for temperature greater than $2000\\,{\\rm K}$, because the coefficients of the heat capacity change.  However, we can repeat the process to get\n",
+    "\\begin{align*}\n",
+    "H(T) &= H(2000\\,{\\rm K}) + \\int_{2000\\,{\\rm K}}^{T} dT'\\, C_p(T')\n",
+    ".\n",
+    "\\end{align*}\n",
+    "which is valid for $2000\\,{\\rm K}<T<6000\\,{\\rm K}$.\n",
+    "\n",
+    "So let's first calculate $H(500\\,{\\rm K})$ and $H(2000\\,{\\rm K})$:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A, B, C, D, E = get_coefficients(298.15)\n",
+    "T_end = 500\n",
+    "T_start = 298.15\n",
+    "H_500 = A*T_end - A*T_start + B*T_end**2/2000 - B*T_start**2/2000 + C*T_end**3/3000000 - C*T_start**3/3000000 + D*T_end**4/4000000000 - D*T_start**4/4000000000 + 1000000*E/T_start - 1000000*E/T_end\n",
+    "print(f'enthalpy at T=500 K: {H_500}')\n",
+    "\n",
+    "A, B, C, D, E = get_coefficients(600)\n",
+    "T_end = 2000\n",
+    "T_start = 500\n",
+    "H_2000 = H_500 + A*T_end - A*T_start + B*T_end**2/2000 - B*T_start**2/2000 + C*T_end**3/3000000 - C*T_start**3/3000000 + D*T_end**4/4000000000 - D*T_start**4/4000000000 + 1000000*E/T_start - 1000000*E/T_end\n",
+    "print(f'enthalpy at T=2000 K: {H_2000}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now with these starting enthalpy values, we can write our function to calculate the enthalpies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_start(T):\n",
+    "    if (T>=100 and T<500):\n",
+    "        T_start = 298.15\n",
+    "        H_start = 0.0\n",
+    "    elif (T>=500 and T<2000):  \n",
+    "        T_start = 500        \n",
+    "        H_start = H_500\n",
+    "    elif (T>=2000 and T<=6000):        \n",
+    "        T_start = 2000        \n",
+    "        H_start = H_2000\n",
+    "    return T_start, H_start\n",
+    "\n",
+    "def get_H(T):\n",
+    "    A, B, C, D, E = get_coefficients(T)\n",
+    "    T_start, H_start = get_start(T)\n",
+    "    H = H_start\n",
+    "    H += A*T - A*T_start \n",
+    "    H += B*T**2/2000 - B*T_start**2/2000 \n",
+    "    H += C*T**3/3000000 - C*T_start**3/3000000 \n",
+    "    H += D*T**4/4000000000 - D*T_start**4/4000000000 \n",
+    "    H += 1000000*E/T_start - 1000000*E/T\n",
+    "    return H\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pylab as plt\n",
+    "\n",
+    "T_data = np.linspace(100.0, 6000.0, 100)\n",
+    "H_data = [get_H(T) for T in T_data]\n",
+    "plt.plot(T_data, H_data)\n",
+    "plt.xlabel(r'temperature / K')\n",
+    "plt.ylabel(r'enthalpy / J mol$^{-1}$')\n",
+    "plt.show()\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
