edits to solution for tutorial 2

--- a/tutorials/tutorialS1_2-soln.ipynb
+++ b/tutorials/tutorialS1_2-soln.ipynb
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can use this expression to start calculating the enthalpy; however, this is one complication.  Because the coefficients for the heat capacity are different in different temperature ranges, we need to divide the integration of the heat capacity into different sections.\n",
+    "Now we can use this expression to start calculating the enthalpy; however, there is one complication.  Because the coefficients for the heat capacity are different in different temperature ranges, we need to divide the integration of the heat capacity into different sections.\n",
     "\n",
     "First we note that differences in the enthalpy are given by integrals of the heat capacity:\n",
     "\\begin{align*}\n",
@@ -366,20 +366,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are told to set the enthalpy of the gas at $298.15\\,{\\rm K}$ to be zero.  That is $H(T=298.15\\,{\\rm K})=0$.  So, let's begin by setting $T_{\\rm start}=298.15\\,{\\rm K}$.  We can then use our integration of the heat capacity to get the enthalpy at any temperature between $100\\,{\\rm K}$ and $500\\,{\\rm K}$.  \n",
+    "We are told to set the enthalpy of the gas at $298.15\\,{\\rm K}$ to be zero.  That is $H(298.15\\,{\\rm K})=0$.  So, let's begin by setting $T_{\\rm start}=298.15\\,{\\rm K}$.  We can then use our integration of the heat capacity to get the enthalpy at any temperature between $100\\,{\\rm K}$ and $500\\,{\\rm K}$.  \n",
     "\\begin{align*}\n",
     "H(T) &= \\int_{298.15\\,{\\rm K}}^{T} dT'\\, C_p(T')\n",
     ".\n",
     "\\end{align*}\n",
     "\n",
-    "We cannot use this formula to get the enthalpy for temperature greater than $100\\,{\\rm K}$, because the coefficients of the heat capacity change.  To get around this problem, we determine the enthalpy at $500\\,{\\rm K}$ using our previous formula.  Then we can determine the enthalpy at temperatures between $500\\,{\\rm K}$ and $2000\\,{\\rm K}$ using:\n",
+    "We cannot use this formula to get the enthalpy for temperatures greater than $100\\,{\\rm K}$, because the coefficients of the heat capacity change.  To get around this problem, we determine the enthalpy at $500\\,{\\rm K}$ using our previous formula.  Then we can determine the enthalpy at temperatures between $500\\,{\\rm K}$ and $2000\\,{\\rm K}$ using:\n",
     "\\begin{align*}\n",
     "H(T) &= H(500\\,{\\rm K}) + \\int_{500\\,{\\rm K}}^{T} dT'\\, C_p(T')\n",
     ".\n",
     "\\end{align*}\n",
-    "which is valid for $500,{\\rm K}<T<2000\\,{\\rm K}$.\n",
+    "which is valid for $500\\,{\\rm K}<T<2000\\,{\\rm K}$.\n",
     "\n",
-    "Again, we cannot use this formula to get the enthalpy for temperature greater than $2000\\,{\\rm K}$, because the coefficients of the heat capacity change.  However, we can repeat the process to get\n",
+    "Similarly to before, we cannot use this formula to get the enthalpy for temperatures greater than $2000\\,{\\rm K}$, because the coefficients of the heat capacity change.  However, we can repeat the process to get\n",
     "\\begin{align*}\n",
     "H(T) &= H(2000\\,{\\rm K}) + \\int_{2000\\,{\\rm K}}^{T} dT'\\, C_p(T')\n",
     ".\n",
