fixes for tutorial 4

--- a/tutorials/tutorialS1_4.ipynb
+++ b/tutorials/tutorialS1_4.ipynb
@@ -116,7 +116,7 @@
     "We want to create a mechanical battery which stores energy in the form\n",
     "of the rotational kinetic energy of a disk.  Determine kinetic energy\n",
     "of a solid disk with radius $R$ and thickness $H$ and that is spinning\n",
-    "at an angular velocity $\\dot{theta}$.  Assume that the disk is made of\n",
+    "at an angular velocity $\\dot{\\theta}$.  Assume that the disk is made of\n",
     "a material of density $\\rho$.\n",
     "\n",
     "Recall that the velocity of a point a distance $r$ from the center of\n",
