fixes to tutorial 4

--- a/tutorials/tutorialS1_4.ipynb
+++ b/tutorials/tutorialS1_4.ipynb
@@ -113,9 +113,10 @@
     "- [The Mechanical Battery Explained - A Flywheel Comeback?](https://www.youtube.com/watch?v=8X2U7bDNcPM)\n",
     "- [Flywheel Battery](https://www.youtube.com/watch?v=yhu3s1ut3wM)\n",
     "- [The Mechanical Battery](https://www.youtube.com/watch?v=_QLEERYS5C8)\n",
+    "\n",
     "We want to create a mechanical battery which stores energy in the form\n",
     "of the rotational kinetic energy of a disk.  Determine kinetic energy\n",
-    "of a solid disk with radius $R$ and thickness $H$ and that is spinning\n",
+    "of a solid disk with radius $R$ and thickness $H$ that is spinning\n",
     "at an angular velocity $\\dot{\\theta}$.  Assume that the disk is made of\n",
     "a material of density $\\rho$.\n",
     "\n",
