--- a/tutorials/tutorialS1_7-soln.ipynb
+++ b/tutorials/tutorialS1_7-soln.ipynb
@@ -227,14 +227,14 @@
     "This question tries to analyze and understand the processes that occur when a meteorite falls through the earth's atmostphere (see [TOP 5 METEORITE FALLS](https://www.youtube.com/watch?v=olgJuoxr2Lo)).\n",
     "\n",
     "A spherical meteorite of radius $R=5\\,{\\rm m}$ enters the Earth's\n",
-    "atmosphere at an initial velocity of $v_0=20\\,{\\rm km\\,s}^{-1}$.  It is\n",
+    "atmosphere at an initial velocity of $v_0=20\\,{\\rm km\\,s}^{-1}$ and an initial temperature $T_0=4\\,{\\rm K}$.  It is\n",
     "accelerated towards the ground by gravity $g=9.81\\,{\\rm m\\,s}^{-1}$\n",
     "but is decelerated by air friction, which is given by\n",
     "\\begin{align*}\n",
     "  F_d = C_d A \\frac{1}{2} \\rho v^2\n",
     "\\end{align*}\n",
     "where $C_d=0.90$ is the drag coefficient, $A$ is the cross-sectional\n",
-    "area of meteor (i.e.\\ $\\pi R^2$), $\\rho=1.2\\,{\\rm kg\\,m}^{-3}$ is the\n",
+    "area of meteor (i.e. $\\pi R^2$), $\\rho=1.2\\,{\\rm kg\\,m}^{-3}$ is the\n",
     "density of the surrounding atmosphere, and $v$ is its speed.\n",
     "\n",
     "Assume that the meteorite is made of solid iron (which has density\n",
