updates to solutions to tutorial 8

--- a/tutorials/tutorialS1_8-soln.ipynb
+++ b/tutorials/tutorialS1_8-soln.ipynb
@@ -140,6 +140,7 @@
     "\n",
     "Introducing this into the differential equation, we have\n",
     "\\begin{align*}\n",
+    "\\frac{p_1V_1}{p_0}\n",
     "  \\frac{dy}{dt}\n",
     "  &= KA_0 \\sqrt{\\frac{2p_0}{\\rho}}\n",
     "    \\sqrt{\\frac{1}{y} - 1}\n",
@@ -178,7 +179,7 @@
     "A0 = 0.25*np.pi*(25.0e-3)**2\n",
     "p0 = 1.0e5 # environmental pressure / Pa\n",
     "\n",
-    "tau = p1*V1/(Cd*p0*A0) * np.sqrt(rho/(2.0*p0))\n",
+    "tau = p1*V1/(K*p0*A0) * np.sqrt(rho/(2.0*p0))\n",
     "\n",
     "print(f'tau = {tau} s')\n"
    ]
@@ -670,18 +671,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fdb14ead",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C_1*exp(2*x) + C_2*exp(x)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -739,18 +732,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0e2b116d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C_1*exp(x*(-1 + 2*I)) + C_2*exp(x*(-1 - 2*I))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -791,18 +776,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5db7484b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C_1*exp(-x) + C_2*x*exp(-x)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -835,19 +812,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5845cbb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_p(x) = -2*x - exp(2*x) + 2\n",
-      "y(x) = C_1*exp(3*x) + C_2*exp(-x) - 2*x - exp(2*x) + 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -894,19 +862,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8a751f7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_p(x) = 4*sin(x)/25 + 3*cos(x)/25\n",
-      "y(x) = C_1*exp(3*x) + C_2*x*exp(3*x) + 4*sin(x)/25 + 3*cos(x)/25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -953,7 +912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
