updates to solutions to tutorial 8

--- a/tutorials/tutorialS1_8-soln.ipynb
+++ b/tutorials/tutorialS1_8-soln.ipynb
@@ -869,10 +869,14 @@
    "source": [
     "import sympy as sp\n",
     "\n",
+    "x  = sp.symbols('x')\n",
+    "\n",
     "a, b, c = 1, 2, 1\n",
     "f = 2*sp.sin(x)\n",
     "\n",
     "det = b**2 - 4*a*c\n",
+    "lam1 = (-b+sp.sqrt(det))/(2*a)\n",
+    "lam2 = (-b-sp.sqrt(det))/(2*a)\n",
     "\n",
     "x  = sp.symbols('x')\n",
     "C1, C2 = sp.symbols('C_1 C_2')\n",
@@ -881,8 +885,6 @@
     "    y1 = sp.exp(lam1*x)\n",
     "    y2 = x*sp.exp(lam1*x)\n",
     "else:\n",
-    "    lam1 = (-b+sp.sqrt(det))/(2*a)\n",
-    "    lam2 = (-b-sp.sqrt(det))/(2*a)\n",
     "    y1 = sp.exp(lam1*x)\n",
     "    y2 = sp.exp(lam2*x)\n",
     "\n",
