updates to solution for tutorial 8

--- a/tutorials/tutorialS1_8-soln.ipynb
+++ b/tutorials/tutorialS1_8-soln.ipynb
@@ -812,10 +812,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5845cbb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_p(x) = -2*x - exp(2*x) + 2\n",
+      "y(x) = C_1*exp(3*x) + C_2*exp(-x) - 2*x - exp(2*x) + 2\n"
+     ]
+    }
+   ],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -829,6 +838,7 @@
     "\n",
     "\n",
     "if (det == 0):\n",
+    "    lam1 = (-b+sp.sqrt(det))/(2*a)\n",
     "    y1 = sp.exp(lam1*x)\n",
     "    y2 = x*sp.exp(lam1*x)\n",
     "else:\n",
@@ -862,10 +872,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a751f7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_p(x) = -cos(x)\n",
+      "y(x) = (C_1 + C_2*x - exp(x)*cos(x))*exp(-x)\n"
+     ]
+    }
+   ],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -882,6 +901,7 @@
     "C1, C2 = sp.symbols('C_1 C_2')\n",
     "\n",
     "if (det == 0):\n",
+    "    lam1 = (-b+sp.sqrt(det))/(2*a)\n",
     "    y1 = sp.exp(lam1*x)\n",
     "    y2 = x*sp.exp(lam1*x)\n",
     "else:\n",
@@ -928,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
