--- a/tutorials/tutorialS1_4-soln.ipynb
+++ b/tutorials/tutorialS1_4-soln.ipynb
@@ -66,9 +66,9 @@
     "\\end{align*}  \n",
     "where $\\eta$ is the efficiency of the engine.  For a Carnot engine,\n",
     "the efficiency is given by $\\eta=1-T_C/T_H$, where $T_H$ is the\n",
-    "temperature at which heat is supplied to the engin, and $T_C$ is the\n",
+    "temperature at which heat is supplied to the engine, and $T_C$ is the\n",
     "temperature at which heat is rejected from the engine.  For this\n",
-    "problem, the engine received heat at $T_H$, the temperature of the\n",
+    "problem, the engine receives heat at $T_H$, the temperature of the\n",
     "water in the cup, and rejects heat to the surrounding air, which is at\n",
     "temperature $T_0$.\n",
     "\n",
@@ -531,7 +531,7 @@
     "rho = 8050.0 # density of steel / kg m^{-3}\n",
     "#R = 1   # flywheel radius / m\n",
     "R = 0.15 #\n",
-    "H = 0.1 # flywheel thickness / m\n",
+    "H = 0.01 # flywheel thickness / m\n",
     "\n",
     "dot_theta = (E / (0.25*rho*H*np.pi*R**4))**0.5\n",
     "\n",
@@ -791,7 +791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -805,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
