--- a/tutorials/tutorialS1_6-soln.ipynb
+++ b/tutorials/tutorialS1_6-soln.ipynb
@@ -980,23 +980,25 @@
    "source": [
     "### Part 4:\n",
     "\n",
-    "\n",
     "\\begin{align*}\n",
     "  xy^3\\frac{dy}{dx} &= (1+x^2)(1+y^2)  \n",
     "\\\\\n",
     "  \\frac{y^3}{(1+y^2)  }\\frac{dy}{dx} &= \\frac{1+x^2}{x}\n",
     "\\\\\n",
-    "  \\frac{y^3dx}{(1+y^2)} &= \\frac{(1+x^2)dx}{x}\n",
+    "  \\frac{y^3dy}{(1+y^2)}\n",
+    "&= \\left(\\frac{1+x^2}{x}\\right) dx\n",
     "\\\\\n",
-    "  \\frac{y(1+y^2-1)dy}{(1+y^2)} &= \\left(\\frac{1}{x}+x\\right)dx\n",
+    "  \\frac{y(1+y^2-1)dy}{(1+y^2)}\n",
+    "&= \\left(\\frac{1}{x}+x\\right)dx\n",
     "\\\\\n",
-    "\\left(y - \\frac{y dy}{1+y^2}\\right)dy\n",
+    "\\left(y - \\frac{y}{1+y^2}\\right)dy\n",
     "&= \\left(\\frac{1}{x}+x\\right)dx\n",
     "\\\\\n",
     "\\frac{y^2}{2} - \\frac{1}{2}\\ln|1+y^2|\n",
     "&= \\ln|x| + \\frac{x^2}{2}\n",
     "+ C\n",
     "\\end{align*}\n",
+    "\n",
     "where $C$ is an unknown integration constant.\n",
     "\n",
     "Just out of curiosity, let's see what `sympy` gives:"
@@ -1151,7 +1153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1165,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
