--- a/tutorials/tutorialS1_7-soln.ipynb
+++ b/tutorials/tutorialS1_7-soln.ipynb
@@ -383,7 +383,7 @@
     "\\end{align*}\n",
     "where\n",
     "\\begin{align*}\n",
-    "A &= (1-\\bar{v})\\frac{1+\\bar{v}_0}{1-\\bar{v}_0}\n",
+    "A &= \\frac{1-\\bar{v}_0}{1+\\bar{v}_0}\n",
     "\\end{align*}\n",
     "This can then be rearranged to give:\n",
     "\\begin{align*}\n",
@@ -1272,7 +1272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1286,7 +1286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
