fix to solutions to tutorial 7

--- a/tutorials/tutorialS1_7-soln.ipynb
+++ b/tutorials/tutorialS1_7-soln.ipynb
@@ -358,11 +358,14 @@
     "  \\frac{1}{2}\\left[\n",
     "    \\frac{d\\bar{v}}{1 + \\bar{v}} + \\frac{d\\bar{v}}{1 - \\bar{v}}\n",
     "  \\right]\n",
-    "  &= d\\bar{t}  \n",
+    "  &= d\\bar{t}\n",
     "  \\\\\n",
-    "  \\ln(1+\\bar{v})-\\ln(1-\\bar{v}) &= \\bar{t} + C\n",
+    "  \\frac{d\\bar{v}}{1 + \\bar{v}} + \\frac{d\\bar{v}}{1 - \\bar{v}}\n",
+    "  &= 2d\\bar{t}  \n",
     "  \\\\\n",
-    "  \\ln\\frac{1+\\bar{v}}{1-\\bar{v}} &= \\bar{t} + C\n",
+    "  \\ln(1+\\bar{v})-\\ln(1-\\bar{v}) &= 2\\bar{t} + C\n",
+    "  \\\\\n",
+    "  \\ln\\frac{1+\\bar{v}}{1-\\bar{v}} &= 2\\bar{t} + C\n",
     "\\end{align*}\n",
     "where $C$ is an integration constant, which can be determined from the initial condition $\\bar{v}=v_0/v_\\infty$ at time $\\bar{t}=0$:\n",
     "\\begin{align*}\n",
@@ -372,14 +375,14 @@
     "\\end{align*}\n",
     "The solution is then\n",
     "\\begin{align*}\n",
-    "  \\ln\\frac{1+\\bar{v}}{1-\\bar{v}} &= \\bar{t} + \\ln\\frac{1+\\bar{v}_0}{1-\\bar{v}_0}\n",
+    "  \\ln\\frac{1+\\bar{v}}{1-\\bar{v}} &= 2\\bar{t} + \\ln\\frac{1+\\bar{v}_0}{1-\\bar{v}_0}\n",
     "  \\\\\n",
     "\\frac{1+\\bar{v}}{1-\\bar{v}} \n",
-    "&= \\frac{1+\\bar{v}_0}{1-\\bar{v}_0}e^{\\bar{t}} \n",
+    "&= \\frac{1+\\bar{v}_0}{1-\\bar{v}_0}e^{2\\bar{t}} \n",
     "\\\\\n",
     "\\frac{1-\\bar{v}}{1+\\bar{v}} \n",
-    "&= \\frac{1-\\bar{v}_0}{1+\\bar{v}_0}e^{-\\bar{t}} \n",
-    "= Ae^{-\\bar{t}}\n",
+    "&= \\frac{1-\\bar{v}_0}{1+\\bar{v}_0}e^{-2\\bar{t}} \n",
+    "= Ae^{-2\\bar{t}}\n",
     "\\end{align*}\n",
     "where\n",
     "\\begin{align*}\n",
@@ -387,7 +390,7 @@
     "\\end{align*}\n",
     "This can then be rearranged to give:\n",
     "\\begin{align*}\n",
-    "  v(t) &= v_\\infty \\frac{1-Ae^{-t/\\tau}}{1+Ae^{-t/\\tau}}\n",
+    "  v(t) &= v_\\infty \\frac{1-Ae^{-2t/\\tau}}{1+Ae^{-2t/\\tau}}\n",
     "\\end{align*}\n"
    ]
   },
@@ -406,7 +409,7 @@
     "def velocity_bar(t):\n",
     "    A = (1.0-v0/vt)/(1.0+v0/vt)\n",
     "    tbar = t/tau\n",
-    "    vbar = (1.0-A*np.exp(-tbar))/(1.0+A*np.exp(-tbar))\n",
+    "    vbar = (1.0-A*np.exp(-2.0*tbar))/(1.0+A*np.exp(-2.0*tbar))\n",
     "    return vbar\n",
     "\n",
     "\n",
