corrections for solutions to tutorial 8

--- a/tutorials/tutorialS1_8-soln.ipynb
+++ b/tutorials/tutorialS1_8-soln.ipynb
@@ -508,6 +508,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dec44ae6",
    "metadata": {},
@@ -528,8 +529,21 @@
     "\\\\\n",
     "\\frac{1}{2}(-v^{-1} - \\ln|v|) &= \\ln |x| + C\n",
     "\\\\\n",
-    "-\\frac{x}{y} - \\ln \\left|y(x)\\right| &=  C\n",
-    "\\end{align*}"
+    "-v^{-1} - \\ln|v|) &= 2\\ln |x| + 2C\n",
+    "\\\\\n",
+    "-\\frac{x}{y} - \\ln\\frac{|y|}{|x|} &= 2\\ln |x| + 2C\n",
+    "\\\\\n",
+    "-\\frac{x}{y} - \\ln\\frac{|y|}{|x|} &= \\ln |x|^2 + 2C\n",
+    "\\\\\n",
+    "-\\frac{x}{y} - \\ln\\frac{|y|}{|x|} - \\ln |x|^2 &= 2C\n",
+    "\\\\\n",
+    "-\\frac{x}{y} - \\ln|y||x| &= 2C\n",
+    "\\\\\n",
+    "-\\frac{x}{y(x)} - \\ln \\left|x y(x)\\right| &=  2C\n",
+    "\\\\\n",
+    "-\\frac{x}{y(x)} - \\ln \\left|x y(x)\\right| &=  C'\n",
+    "\\end{align*}\n",
+    "where $C'=2C$."
    ]
   },
   {
@@ -812,19 +826,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5845cbb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_p(x) = -2*x - exp(2*x) + 2\n",
-      "y(x) = C_1*exp(3*x) + C_2*exp(-x) - 2*x - exp(2*x) + 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
@@ -872,19 +877,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8a751f7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_p(x) = -cos(x)\n",
-      "y(x) = (C_1 + C_2*x - exp(x)*cos(x))*exp(-x)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "\n",
