adding comparison for tutorial 9

--- a/tutorials/tutorialS1_9-soln.ipynb
+++ b/tutorials/tutorialS1_9-soln.ipynb
@@ -616,7 +616,7 @@
     "    y_init = [0.0, 0.0, v0*np.cos(theta), v0*np.sin(theta)]\n",
     "    solution = solve_ivp(dydt, (t_init, t_final), y_init, t_eval=t_data)\n",
     "\n",
-    "    return solution.y[0], solution.y[1]\n",
+    "    return solution\n",
     "\n",
     "\n",
     "Cd = 0.44\n",
@@ -628,9 +628,13 @@
     "v0 = 70.0\n",
     "g = 9.81\n",
     "    \n",
+    "sol_dict = {}    \n",
     "for theta_degrees in [20, 30, 32, 45, 50]:\n",
-    "    x_dat, y_dat = get_trajectory(theta_degrees)\n",
+    "    sol = get_trajectory(theta_degrees)\n",
+    "    x_dat = sol.y[0]\n",
+    "    y_dat = sol.y[1]\n",
     "    plt.plot(x_dat, y_dat, label=r'$\\theta=$'+f'{theta_degrees}'+r'$^\\circ$') \n",
+    "    sol_dict[theta_degrees] = sol\n",
     "\n",
     "\n",
     "#plt.ylim([0.0, 100])\n",
@@ -701,6 +705,7 @@
     "for theta_degrees in [20, 30, 32, 45, 50]:\n",
     "    x_dat, y_dat = get_trajectory(theta_degrees)\n",
     "    plt.plot(x_dat, y_dat, label=r'$\\theta=$'+f'{theta_degrees}'+r'$^\\circ$') \n",
+    "    plt.plot(sol_dict[theta_degrees].y[0], sol_dict[theta_degrees].y[1], ls='dotted')\n",
     "\n",
     "\n",
     "#plt.ylim([0.0, 100])\n",
@@ -737,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
